--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -5,6 +5,41 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+@article {MR2978328,
+    AUTHOR = {Bourdon, Marc},
+     TITLE = {Un th\'{e}or\`eme de point fixe sur les espaces {$L^p$}},
+   JOURNAL = {Publ. Mat.},
+  FJOURNAL = {Publicacions Matem\`atiques},
+    VOLUME = {56},
+      YEAR = {2012},
+    NUMBER = {2},
+     PAGES = {375--392},
+      ISSN = {0214-1493},
+   MRCLASS = {31C45 (47H10)},
+  MRNUMBER = {2978328},
+MRREVIEWER = {Rafael Oswaldo Ruggiero},
+       DOI = {10.5565/PUBLMAT\_56212\_05},
+       URL = {https://doi.org/10.5565/PUBLMAT_56212_05},
+}
+
+@article {MR4119107,
+    AUTHOR = {Tessera, Romain and Valette, Alain},
+     TITLE = {Locally compact groups with every isometric action bounded or
+              proper},
+      NOTE = {With an appendix by Corina Ciobotaru},
+   JOURNAL = {J. Topol. Anal.},
+  FJOURNAL = {Journal of Topology and Analysis},
+    VOLUME = {12},
+      YEAR = {2020},
+    NUMBER = {2},
+     PAGES = {267--292},
+      ISSN = {1793-5253},
+   MRCLASS = {22D12 (22B05 22C05 22E20)},
+  MRNUMBER = {4119107},
+       DOI = {10.1142/S1793525319500547},
+       URL = {https://doi.org/10.1142/S1793525319500547},
+}
+
 @incollection {MR3382026,
     AUTHOR = {Nowak, Piotr W.},
      TITLE = {Group actions on {B}anach spaces},
@@ -193,18 +228,16 @@ MRREVIEWER = {Piotr W. Nowak},
 
 @ARTICLE{2017arXiv170500834G,
        author = {{Genevois}, Anthony},
-        title = "{Lamplighter groups, median spaces, and a-T-menability}",
+        title = {{L}amplighter groups, median spaces, and {H}ilbertian geometry},
       journal = {arXiv e-prints},
      keywords = {Mathematics - Group Theory, Mathematics - Metric Geometry, 20F65, 20F67, 43A15},
-         year = 2017,
-        month = may,
+         year = 2021,
+        month = jan,
           eid = {arXiv:1705.00834},
         pages = {arXiv:1705.00834},
 archivePrefix = {arXiv},
        eprint = {1705.00834},
  primaryClass = {math.GR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2017arXiv170500834G},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{MR1705337,
