--- a/Property FW and wreath products/Medians/GroupesTop/MedianTop.tex
+++ b/Property FW and wreath products/Medians/GroupesTop/MedianTop.tex
@@ -392,7 +392,7 @@ It is said to have
 %
 In the above, we insisted on the fact that actions are supposed to preserve the structure of the metric space under consideration, or in other words to be by automorphisms of the considered category. This is sometimes automatic, as for example any isometry of a real Banach or Hilbert space is affine by the Mazur-Ulam theorem.
 However, for graphs this is not the case; a $2$-regular tree has automorphism group $\Z\rtimes(\Z/2\Z)$, while the automorphism group of its geometric realization (the line $\mathbf R$) is $\R\rtimes(\Z/2\Z)$. In other words, an isometry of a graph is not necessarily a graph isomorphism.
-In the following, we will often do a slight abuse of notation and simply speak of a \emph{group action} on a space $X$, without always specifying by which kinds of maps the group acts, which should always be clear from the context. 
+In the following, we will often do a slight abuse of notation and simply speak of a \emph{group action} on a space $X$, without always specifying by which kinds of maps the group acts, which should always be clear from the context. \GS{Sens de ce paragraphe. Est ce utile ?}
 
 %
 %
