Mise à jour topo

--- a/Property FW and wreath products/Bouts/Introduction_v3.tex
+++ b/Property FW and wreath products/Bouts/Introduction_v3.tex
@@ -38,7 +38,8 @@ Let $G,H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$
 \end{thm}
 %
 %
-As consequence of more general results in \cite{Cornulier2013}, Cornullier proved an analogous of Theorem~\ref{T:Wreath_prop_T} for property FW: \GS{Màj avec Cornullier}
+%As consequence of more general results in \cite{Cornulier2013}, Cornulier proved an analogous of Theorem~\ref{T:Wreath_prop_T} for property FW: \GS{Màj avec Cornulier}
+In \cite{Cornulier2013} Cornulier studied property FW using \emph{cardinal definite functions} and while not explicitly stated in \cite{Cornulier2013}, the following result can be extracted from his work.\PH{Reformulé}
 %
 %
 \begin{thm}\label{Thm:Main}
@@ -46,15 +47,17 @@ Let $G,H$ be two finitely generated groups with $G$ non-trivial and $X$ a set on
 \end{thm}
 %
 %
- The aim of this note is to give an explicit combinatorial elementary proof using a characterization of property FW with the number of ends of Schreier graphs, see Subsection \ref{Subsection:FW} for the relevant definitions. \GS{Idem}
+%The aim of this note is to give an explicit combinatorial elementary proof using a characterization of property FW with the number of ends of Schreier graphs, see Subsection \ref{Subsection:FW} for the relevant definitions. \GS{Idem}
+The aim of this note is to give an explicit and elementary proof of this fact using a characterization of property FW via the number of ends of Schreier graphs, see Subsection \ref{Subsection:FW} for the relevant definitions. \PH{Idem}
 
 %Corulier and Kar studied the question of stability of wreath product for property FA in \cite{Cornulier2011}. They proved a similar result if the action of the group $H$ has finitely many orbits and no fixed point. The condition that $G$ has property FA is replaced by $G$ has finite abelianization and $G$ can not be expressed as a countable union of properly increasing sequence of subgroups. %\todo{Peut être mettre une phrase qui explique en quoi c'est différent de FA}
 
 %A somewhat similar result for property FA was obtained by Cornulier and Kar in \cite{Cornulier2011}.
-\GS{Enlevé la discussion pour FA, car on veut peut être centrer sur la preuve, mais on peut remettre}
+%\GS{Enlevé la discussion pour FA, car on veut peut être centrer sur la preuve, mais on peut remettre}
 At this point, the curious reader might have two questions. First, is it possible to extend Theorem \ref{Thm:Main} beyond the realms of finitely generated groups and of actions with finitely many orbits? And secondly, is there a link between Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main}?
 In both cases, the answer is yes.
-This is the subject of the forthcoming and more technical paper \cite{LS2021}, which gives an unified proof of Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main} as well as of similar results for the Bergman's property and more.
+%This is the subject of the forthcoming and more technical paper \cite{LS2021}, which gives an unified proof of Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main} as well as of similar results for the Bergman's property and more.
+This is the subject of the more technical paper \cite{LS2021}, which gives an unified proof of Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main} as well as of similar results for the Bergman's property and more.\PH{Changé la phrase + mis la référence à jour.}
 %
 %
 %
