--- a/Property FW and wreath products/Bouts/ends_v3.tex
+++ b/Property FW and wreath products/Bouts/ends_v3.tex
@@ -63,7 +63,7 @@
 %
 %
 \title{Property FW and wreath products of groups: a~simple approach using Schreier graphs}
-\author{Paul-Henry Leemann, Grégoire Schneeberger}
+\author{Paul-Henry Leemann\thanks{Supported by grant 200021\textunderscore188578 of the Swiss National Fund for Scientific Research.}, Grégoire Schneeberger}
 \date{\today \quad \currenttime}
 %
 %
@@ -89,7 +89,11 @@
 %
 \begin{abstract}
 The group property FW stands in-between the celebrated Kazdhan's property (T) and Serre's property FA. Among many characterizations, it might be defined, for finitely generated groups, as having all Schreier graphs one-ended.
-Yves Cornullier proved that a finitely generated wreath product $G\wr_XH$ has property FW if and only if both $G$ and $H$ have property FW and $X$ is finite. In this paper, we will present a more explicit combinatorial elementary proof using Schreier graphs. \GS{Ajouté que c'est déjà dans Cornullier}
+%Yves Cornulier proved that a finitely generated wreath product $G\wr_XH$ has property FW if and only if both $G$ and $H$ have property FW and $X$ is finite. In this paper, we will present a more explicit combinatorial elementary proof using Schreier graphs. \GS{Ajouté que c'est déjà dans Cornulier}
+
+It follows from the work of Y. Cornulier that a finitely generated wreath product $G\wr_XH$ has property FW if and only if both $G$ and $H$ have property FW and $X$ is finite.
+%In this paper, we will present a more explicit combinatorial elementary proof using Schreier graphs.
+The aim of this paper is to give an elementary, direct and explicit proof of this fact using Schreier graphs.\PH{Légèrement reformulé.}
 \end{abstract}
 %
 %
@@ -172,8 +176,8 @@ Heinz Hopf.
 
 \bibitem{LS2021}
 Paul-Henry Leemann and Gr{\'e}goire Schneeberger.
-\newblock Groups acting with bounded orbits and wreath products.
-\newblock In preparation.
+\newblock Wreath products of groups acting with bounded orbits.
+\newblock {\em arXiv e-prints}, page arXiv:2102.08001, February 2021.
 
 \bibitem{MR1358635}
 Alexander Lubotzky.
